src/test/deca/syntax/valid/provided/hello.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2023

{
        if(true){
                if(false){
                        println("non");
                }
                else{
                        println("oui");
                }
        }
}