src/test/deca/syntax/invalid/homemade/lexer/test/test_lex_inv_accolade_non_fermee.deca
// Description:
//    tests de programme incorrect lexicalement (accolade non fermée)
//
// Resultats:
//    ligne 10 : Erreur, accolade non fermée
//
// Historique:
//    cree le 04/01/2023

{   
